# oceantools

./: .gitignore  README.md  catalog.yaml  interp_SC.py  prova_nodtime_surf.nc  prova_notime_nodepth_surf.nc  setup.cfg  setup.py  sol.py  spatial_regrid.py  utils.py
geometry/: catalog.yaml  example_6.nc  spatial_regrid.py
geometry/tests/: mask.nc
install/: environment.yml
oceantools.egg-info/: PKG-INFO  SOURCES.txt
tests/: NWP_noTime_nodepth.nc  NWP_nodepth.nc  mask_surf.nc
