[metadata]
name = oceantools
version = 0.0.0
author = Salvatore Causio
author_email = salvatore.causio@cmcc.it
description = A simple tool for regular netcdf regrid
long_description = file: README.md
url = ''

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6